--- a/Untitled-7.html
+++ b/Untitled-7.html
@@ -6,7 +6,7 @@
 	<meta lang="no-NO">
 <title>csstest</title>
 <style type="text/css">
-@import url("../../Workings files/sample docs/test.css");
+@import url("test.css");
 </style>
 	<script>
 function myFunction() {
@@ -40,7 +40,7 @@ function myFunction() {
 				<a href="https://www.visma.no/" target="_blank"><button class="button">Visma<span class="tooltip1"> Eavent is modeled after this website.</span> </button></a>
 			</div>
 		
-			<div class="text">Trykk på de knappene øverst for å bytte på.</div>
+			<div class="text">Trykk på knappene øverst for å bytte.</div>
 		</div>
 	
 		<div class="leftside2" id="leftside2">
