--- a/Untitled-7.html
+++ b/Untitled-7.html
@@ -19,7 +19,7 @@ function myFunction() {
 <body>
 <header class="heading" id="heading">
 	<div class="headingsection">
-		<div class="headingdiv" id="headingdiv">Jeg er en selvlært frontend-utvikler og denne siden var laget for rekrutterere i forbindelse med å kunne se hvordan jeg formulerer i koder.</div>
+		<div class="headingdiv" id="headingdiv">Jeg er en selvlært frontend-utvikler og denne siden var laget for rekrutterer i forbindelse med å kunne se hvordan jeg formulerer i koder.</div>
 		
 		<div class="headingdiv1" style="text-align:center;"><button class="headingbutton" onclick="myFunction()"> Gjerne klikk her før du fortsetter </button></div>
 	
@@ -60,7 +60,9 @@ function myFunction() {
 	<!-- Html page break -->
 	<hr/>
 	
-	<div class="section2" id="section2">Siden er ikke ferdig. <br/> Mer til å komme senere. 
+	<div class="section2" id="section2">
+		<div class="parall"><div style="text-align: center; position:relative; left: 0px; top: 10em; width: 100%;" class="parallcontent"><span class="parallcontent1" style="background-color: #383838; font-size: 24px; padding: 14px 24px; color: white; font-family: source san pro;">Våre Partnere</span></div>
+		</div>
 	</div>
 	
 	
